Implement relay propertly
